sazid/tests/snapshots/stream_response_test__tests__ntest_callback-6.snap
---
source: tests/stream_response_test.rs
expression: "&chat_message"
---
ChatCompletionResponseMessage:
  StreamResponse:
    - index: 0
      delta:
        role: ~
        content: " can"
        function_call: ~
      finish_reason: ~

