sazid/tests/snapshots/stream_response_test__tests__ntest_callback.snap
---
source: tests/stream_response_test.rs
expression: "&chat_message"
---
SazidSystemMessage: "Request Token Count: 4"

